# taskflow

./: .gitignore  Cargo.toml  README.md
.taskflow/: tasks.db
src/: main.rs
src/api/: handlers.rs  mod.rs  router.rs
src/cli/: commands.rs  display.rs  mod.rs
src/config/: mod.rs
src/db/: migrations.rs  mod.rs  project_repo.rs  task_repo.rs
src/models/: mod.rs  project.rs  tag.rs  task.rs
