[package]
name = "taskflow"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "taskflow"
path = "src/main.rs"

[dependencies]
tokio = { version = "=1.38.1", features = ["full"] }
pico-args = { version = "0.5", features = ["eq-separator"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "=1.3.4", features = ["v4"] }
toml = { version = "=0.7.8" }
colored = "2"
prettytable-rs = "0.10"
